<resources>
    <string name="app_name">Movie Nigth</string>
    <string name="enter_button">Iniciar Sesión</string>
    <string name="new_user">¿Primera vez en Movie Nigth?</string>
    <string name="create_account">Registrarse</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="login">Inicia sesión</string>
    <string name="recover_password">Recuperar Contraseña</string>
    <string name="full_name"> Nombre y Apellido</string>
    <string name="movie">Películas</string>
    <string name="setting">Configuración</string>
    <string name="home">Inicio</string>
    <string name="el_rey_leon">"El rey León"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_fuera_de_control">Fuera de control</string>
    <string name="advances">AVANCES</string>
    <string name="advance_1917">1917</string>
    <string name="Unidos">Unidos</string>
    <string name="Pasasite">Pasasite</string>
    <string name="Parque_Magico">Parque Mágico</string>
    <string name="locos_addams">Los locos Addams</string>
    <string name="title_activity_splash">Splash</string>
    <string name="play">Reproducir</string>
    <string name="dos_por_el_dinero">Dos por el dinero</string>
    <string name="dracula">Dracula</string>
    <string name="rapido_furioso">Rápido y Furioso 8</string>
    <string name="telnet">Telnet</string>
    <string name="contra_imposible">Contra lo imposible</string>
    <string name="capitan">Capitan América</string>
    <string name="proyecto">Proyecto Géminis</string>
    <string name="everest">Everest</string>
    <string name="fav">Favoritos</string>
    <string name="share">Compartir</string>
    <string name="sinopsis_fuera_control">Después de un ataque de furia, causado por una discusión con la
        conductora del coche de al lado, pierde totalmente la cabeza y comienza una persecución ilimitada, dejando un rastro de muertes a su paso.</string>
    <string name="my_list">Mi lista</string>
    <string name="my_profile">Mi lista</string>
    <string name="perfil">Perfil</string>
    <string name="pass">CONTRASEÑA</string>
    <string name="editarPerfil">Editar Perfil</string>
    <string name="cancelar">Cancelar</string>
    <string name="listo">Listo</string>
    <string name="nombreApellido">Nombre y Apellido</string>
    <string name="preferencia">Preferencias</string>
    <string-array name="preferencias">
        <item>Peliculas</item>
        <item>Series</item>
    </string-array>
    <string name="tema">Aspecto oscuro</string>
    <string name="cuenta">Cuenta</string>


</resources>