<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.FragmentDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/line0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageMovieDetail"
                android:layout_width="@dimen/movie"
                android:layout_height="@dimen/movie"
                android:layout_marginTop="@dimen/margin"
                android:layout_gravity="center"
                android:background="@color/background"/>

            <TextView
                android:id="@+id/titleMovieDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/title_detail"
                android:layout_marginTop="@dimen/magin_titulo"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_movie"
                android:orientation="horizontal"
                android:layout_above="@id/titleMovieDetail"
                android:layout_below="@id/playButton"
                android:gravity="center">

                <Button
                    android:id="@+id/favbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_movie"
                    android:background="@drawable/button_no_border"
                    android:text="@string/fav"
                    android:drawableTop="@drawable/ic_fav"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text"
                    android:typeface="normal" />

                <Button
                    android:id="@+id/sharebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_movie"
                    android:background="@drawable/button_no_border"
                    android:text="@string/share"
                    android:drawableTop="@drawable/ic_share"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text"
                    android:typeface="normal" />



            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/textSinopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text"
                android:layout_marginTop="@dimen/text"
                android:layout_marginBottom="@dimen/text"
                android:textAlignment="center"
                android:layout_marginStart="@dimen/text"
                android:layout_marginEnd="@dimen/text"/>

            <Button
                android:id="@+id/playButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/high_button"
                android:text="@string/play"
                android:textColor="@color/white"
                android:background="@drawable/button_rounded_play"
                android:textSize="@dimen/text"
                android:gravity="center"
                android:layout_below="@id/textSinopsis"
                android:layout_marginTop="@dimen/titulo"
                />




        </androidx.appcompat.widget.LinearLayoutCompat>




    </RelativeLayout>
    </ScrollView>
</FrameLayout>